# tyro

./: .buildinfo  .coverage  .coveragerc  .flake8  .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  _update_readme.py  benchmark_comparison.py  example.py  example_more_elaborate.py  index.html  namedtuple_example.py  objects.inv  progress_log.txt  pyproject.toml  refactor_attempt_2_summary.md  refactor_plan.md  searchindex.js  setup.py  test_import_debug.py  test_lazy_annotation_example.py  test_narrow_subtypes_NEW.py  test_tyro_type_perf.py
.doctrees/: alternatives.doctree  building_configuration_systems.doctree  environment.pickle  example_01.doctree  example_02.doctree  example_03.doctree  example_04.doctree  example_05.doctree  example_06.doctree  example_07.doctree  example_08.doctree  example_09.doctree  example_10.doctree  example_11.doctree  example_12.doctree  example_13.doctree  example_14.doctree  goals_and_alternatives.doctree  helptext_generation.doctree  index.doctree  installation.doctree  serialization.doctree  supported_types.doctree  tab_completion.doctree  wandb_sweeps.doctree  whats_supported.doctree  your_first_cli.doctree
.doctrees/examples/: 01_functions.doctree  02_dataclasses.doctree  03_enums and containers.doctree  03_enums_and_containers.doctree  04_flags.doctree  05_hierarchical configs.doctree  05_hierarchical_configs.doctree  06_base configs.doctree  06_base_configs.doctree  06_literals_and_unions.doctree  07_literals and unions.doctree  07_literals_and_unions.doctree  07_positional_args.doctree  08_positional args.doctree  08_positional_args.doctree  basics.doctree  (+22 more)
_modules/: index.html
_sources/: alternatives.md.txt  building_configuration_systems.md.txt  example_01.rst.txt  example_02.rst.txt  example_03.rst.txt  example_04.rst.txt  example_05.rst.txt  example_06.rst.txt  example_07.rst.txt  example_08.rst.txt  example_09.rst.txt  example_10.rst.txt  example_11.rst.txt  example_12.rst.txt  example_13.rst.txt  example_14.rst.txt  goals_and_alternatives.md.txt  helptext_generation.md.txt  index.md.txt  index.rst.txt  installation.md.txt  installation.rst.txt  tab_completion.md.txt  whats_supported.rst.txt  your_first_cli.md.txt
_static/: documentation_options.js  pygments.css
alternatives/: index.html
benchmark/: 0_flat_struct.py  0_many_args.py  1_shallow_subcommands.py  1_subcommands_many.py  2_sequenced_subcommands.py  2_subcommands_adversarial.py  benchmark.py  benchmark_wide.py  benchmark_wide_loop.py  configs.py  profile_many_args.py
benchmarks_release/: 0_many_args_10.py  0_many_args_100.py  0_many_args_1000.py  0_many_args_2000.py  0_many_args_3000.py  1_subcommands_many.py  benchmark_results.csv  benchmark_results.md  compare_versions.py  make_figure.py  make_figure_variants.py
building_configuration_systems/: index.html
dcargs/: __init__.py  _argparse_formatter.py  _arguments.py  _calling.py  _cli.py  _construction.py  _deprecated.py  _docstrings.py  _fields.py  _instantiators.py  _parse.py  _parsers.py  _resolver.py  _serialization.py  _strings.py
docs/: Makefile  requirements.txt  update_example_docs.py
example_01/: index.html
example_02/: index.html
example_03/: index.html
example_04/: index.html
example_05/: index.html
example_06/: index.html
example_07/: index.html
example_08/: index.html
example_09/: index.html
example_10/: index.html
example_11/: index.html
example_12/: index.html
example_13/: index.html
example_14/: index.html
examples/: 01_functions.py  01_simple_functions.py  02_dataclasses.py  02_simple_dataclasses.py  03_enums_and_containers.py  04_flags.py  05_hierarchical_configs.py  06_base_configs.py  06_literals.py  06_literals_and_unions.py  07_literals.py  07_literals_and_unions.py  07_positional_args.py  08_positional_args.py  08_standard_classes.py  08_subcommands.py  08_subparsers.py  09_multiple_subcommands.py  09_multiple_subparsers.py  09_subparsers.py  0_simple_function.py  10_base_configs.py  10_generics.py  10_multiple_subparsers.py  11_dictionaries.py  11_typed_dictionaries.py  12_named_tuples.py  12_tuples.py  13_base_configs.py  13_standard_classes.py  14_generics.py  15_nesting_in_containers.py  16_advanced_configuration.py  17_flax_modules.py  1_simple_dataclass.py  2_enums_and_collections.py  3_flags.py  4_literals.py  5_simple_class.py  6_nested_dataclasses.py  (+13 more)
genindex/: index.html
goals_and_alternatives/: index.html
helptext_generation/: index.html
installation/: index.html
py-modindex/: index.html
search/: index.html
serialization/: index.html
supported_types/: index.html
tab_completion/: index.html
teaser/: dataclass.html  dataclass.webm  function.html  function.webm  index.html  record.py
tests/: _docstring_warning_mod.py  _duplicate_dataclass_names_mod.py  conftest.py  error_message_snapshots.json  helptext_utils.py  test_abc_containers.py  test_add_help.py  test_advanced_tuple_narrowing.py  test_annotated_union_subcommands.py  test_arg_default.py  test_argparse_backend_fixes.py  test_attrs.py  test_base_configs_nested.py  test_base_configs_nested_exclude_py313.py  test_boolean_optional.py  test_bug_repros.py  test_bug_repros_2.py  test_bug_repros_3.py  test_bug_repros_4.py  test_calling_bugs.py  test_chained_typevar_defaults.py  test_collection_struct_union.py  test_collection_union_collections.py  test_collections.py  test_collections_abc_callable.py  test_collections_abc_callable_min_py310.py  test_completion.py  test_completion_bash.py  test_completion_fish.py  test_completion_fish_e2e.py  test_completion_spec.py  test_completion_zsh.py  test_conf.py  test_custom_constructors.py  test_custom_primitive.py  test_dcargs.py  test_decorator_subcommands.py  test_dict_namedtuple.py  test_dict_variable_length.py  test_docstrings.py  (+90 more)
tyro/: __init__.py  _argparse_formatter.py  _arguments.py  _calling.py  _cli.py  _docstrings.py  _fields.py  _instantiators.py  _parsers.py  _resolver.py  _strings.py  _subcommand_matching.py  _unsafe_cache.py
wandb_sweeps/: index.html
whats_supported/: index.html
your_first_cli/: index.html
(+986 files in other folders)
