[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tyro/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tyro"]

[project]
name = "tyro"
authors = [
    {name = "brentyi", email = "brentyi@berkeley.edu"},
]
description = "CLI interfaces & config objects, from types"
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "typeguard>=4.0.0",
    "docstring-parser>=0.15",
    "typing-extensions>=4.13.0",
    "colorama>=0.4.0; platform_system=='Windows'",
    "rich>=11.1.0",
    "shtab>=1.5.6",
    "eval_type_backport>=0.1.3; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "PyYAML>=6.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.5.0",
    "omegaconf>=2.2.2",
    "attrs>=21.4.0",
    "pyright>=1.1.349,!=1.1.379",
    "ruff>=0.1.13",
    "mypy>=1.4.1",
    "pydantic>=2.5.2,!=2.10.0",
    "coverage[toml]>=6.5.0",
    "eval_type_backport>=0.1.3",
    "ml_collections>=0.1.0",
    "msgspec>=0.18.6",
]
dev-nn = [
    "tyro[dev]",
    "flax>=0.6.9;python_version<='3.12'",
    "numpy>=1.20.0",
    "torch>=1.10.0;python_version<='3.12'",
]

[project.urls]
"GitHub" = "https://github.com/brentyi/tyro"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["^tests/test_py311_generated/.*", "_argparse\\.py"]

[tool.coverage.run]
omit = ["**/_argparse.py"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't compute coverage for abstract methods, properties
    "@abstract",
    "@abc\\.abstract",

    # or warnings
    "warnings",

    # or empty function bodies
    "pass",
    "\\.\\.\\.",

    # or typing imports
    "TYPE_CHECKING",

    # or assert statements & errors
    "assert",
    "raise AssertionError",

    # or anything that's not implemented
    "NotImplementedError()",

    # or fallback imports
    "except ImportError:",

    # or anything that's deprecated
    "deprecated"
]

[tool.ruff]
src = ["src"]  # Needed to recognize first-party import location in GitHub action.
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "I"  # Import sorting.
]
lint.ignore = [
    "E741", # Ambiguous variable name. (l, O, or I)
    "E501",  # Line too long.
    "E731",  # Do not assign a lambda expression, use a def.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Global statement updates are discouraged.
    "PLW2901"  # For loop variable overwritten.
]
extend-exclude = ["**/_argparse.py"]

[tool.pyright]
pythonVersion = "3.12"
ignore = ["**/_argparse.py", "./docs/**/*"]
